--- a/.github/workflows/ccpp.yml
+++ b/.github/workflows/ccpp.yml
@@ -6,14 +6,17 @@ jobs:
   build:
 
     runs-on: ubuntu-latest
-    
+
     steps:
     - uses: actions/checkout@v1
     - name: setup_build_dir
       run: mkdir buildproducts
     - name: cmake
       working-directory: ./buildproducts
-      run: cmake ..
+      run: cmake -DBUILD_TESTS=1 ..
     - name: make
       working-directory: ./buildproducts
       run: make
+    - name: test
+      working-directory: ./buildproducts
+      run: make test
